# DPlusPlus_Lib

./: CMakeLists.txt  DPlusPlus.sln  README.md
.run/: Unnamed.run.xml
DPlusPlus/: Channel.cpp  Channel.h  DPlusPlus.vcxproj  DPlusPlus.vcxproj.filters  Discord.cpp  Discord.h  Discord_Virtual.cpp  Discord_Virtuals.cpp  Embed.h  Emoji.cpp  Guild.cpp  Guild.h  Intents.h  Log.cpp  Log.h  Member.cpp  Member.h  Message.cpp  Message.h  Ready.cpp  Ready.h  Role.cpp  Role.h  Test.cpp  User.cpp  User.h  Utilities.cpp  Utilities.h  Voice.cpp  Voice.h  main.cpp  packages.config
DPlusPlus/include/: Channel.h  Discord.h  Embed.h  Emoji.h  Guild.h  GuildPreview.h  Intents.h  Invite.h  Log.h  Member.h  Message.h  Ready.h  Role.h  Snowflake.h  User.h  Utilities.h  Voice.h  VoiceRegion.h
DPlusPlus/source/: Channel.cpp  Discord.cpp  Discord_Virtuals.cpp  Embed.cpp  Emoji.cpp  Guild.cpp  GuildPreview.cpp  Intents.cpp  Invite.cpp  Member.cpp  Message.cpp  Ready.cpp  Role.cpp  Snowflake.cpp  User.cpp  Utilities.cpp  Voice.cpp  VoiceRegion.cpp
